# Inceses

./: README.md  pyproject.toml
src/inceses/: __init__.py  main.py
src/inceses.egg-info/: PKG-INFO
src/inceseslem/: __init__.py
src/phonetic_transcriptor/: test.py
