[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inceses"
version = "1.0"
authors = [
  { name="Enis Tuna", email="enissstuna@gmail.com" },
]
description = "Turkish Phonetic Transcriptor for Python by Enis Tuna"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/enistuna/inceses_turkish_phonetic_transcriptor"
Issues = "https://github.com/enistuna/inceses_turkish_phonetic_transcriptor"